# landingterm

./: FEATURES.md  Structure.md  package-lock.json  package.json  tailwind.config.js
src/: App.css  App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/terminal/: mod.rs  process.rs
src/components/: Tabs.tsx
src/components/Terminal/: CommandBlock.tsx  ContextMenu.tsx  FavoriteCommands.tsx  Terminal.tsx  styles.css  types.ts
src/store/: favoriteStore.ts
src/styles/: tabs.css
src/utils/: shortcuts.ts
